--- a/PokeApp/PokeApp/Pages/MainPage.xaml
+++ b/PokeApp/PokeApp/Pages/MainPage.xaml
@@ -3,29 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PokeApp.MainPage">
     <FlexLayout Direction="Column">
-        <Frame>
-            <Image Source="PokeApp.jpg" HeightRequest="100"/>
+        <Frame FlexLayout.Basis="20%">
+            <Image Source="PokeApp.jpg"/>
         </Frame>
 
-        <Image Source="PikaPokeball.jpg" WidthRequest="200" FlexLayout.AlignSelf="Center"/>
+        <Image FlexLayout.Basis="30%" Source="PikaPokeball.jpg" FlexLayout.AlignSelf="Center"/>
 
-        <StackLayout
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand"
-                Margin="20,10,20,0">
-            
-            <Label Text="Bienvenu cher dresseur !" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
-            
-            <Label Text="PokeApp est une application gratuite développée en France et crée en 2022, constituée d'un Pokedex complet regroupant toutes les informations essentielles et détaillées sur chaque Pokémon : les types, les attaques, les versions et tellement plus."/>
-            <Label Text="Plus de 905 Pokémons incluant également les Pokémon du dernier jeu : Légendes Pokémon : Arceus !"/>
-            
-            <Label Text="Utilisez nos nouvelles fonctionnalités : " HorizontalTextAlignment="Center" FontAttributes="Bold"/>
-            
-            <Label Text="PokeNew : Crée vos propres Pokémons en lui donnant son apparence, ses compétences, ses attaques, et ses évolutions que vous souhaitez !"/>
-            <Label Text="PokeDeck : Construisez votre propre deck avec vos Pokémons préférez ou vos propres Pokémon que vous avez créé en réalisant les meilleurs combos et associations."/>
+        <Label Text="Bienvenu cher dresseur !" HorizontalTextAlignment="Center" FontAttributes="Bold" FlexLayout.Basis="5%" FontSize="Caption"/>
 
-            <Label Text="Bonne chasse / découverte !" HorizontalTextAlignment="Center" FontAttributes="Bold"/>
-        </StackLayout>
-           
+        <Label FlexLayout.Basis="10%" HorizontalTextAlignment="Center" FontSize="Caption" Text="PokeApp est une application gratuite développée en France et crée en 2022, constituée d'un Pokedex complet regroupant toutes les informations essentielles et détaillées sur chaque Pokémon : les types, les attaques, les versions et tellement plus."/>
+        <Label FlexLayout.Basis="7%" HorizontalTextAlignment="Center" FontSize="Caption" Text="Plus de 905 Pokémons incluant également les Pokémon du dernier jeu : Légendes Pokémon : Arceus !"/>
+
+        <Label FlexLayout.Basis="5%" HorizontalTextAlignment="Center" FontSize="Caption" Text="Utilisez nos nouvelles fonctionnalités : "  FontAttributes="Bold"/>
+
+        <Label FlexLayout.Basis="8%" HorizontalTextAlignment="Center" FontSize="Caption" Text="PokeNew : Crée vos propres Pokémons en lui donnant son apparence, ses compétences, ses attaques, et ses évolutions que vous souhaitez !"/>
+        <Label FlexLayout.Basis="10%" HorizontalTextAlignment="Center" FontSize="Caption" Text="PokeDeck : Construisez votre propre deck avec vos Pokémons préférez ou vos propres Pokémon que vous avez créé en réalisant les meilleurs combos et associations."/>
+
+        <Label FlexLayout.Basis="5%" HorizontalTextAlignment="Center" FontSize="Caption" Text="Bonne chasse / découverte !"  FontAttributes="Bold"/>
     </FlexLayout>
 </ContentPage>
