--- a/PokeApp/PokeApp/Pages/ListPage.xaml
+++ b/PokeApp/PokeApp/Pages/ListPage.xaml
@@ -1,39 +1,58 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PokeApp.ListPage">
+﻿<?xml version="1.0" encoding="utf-8"?>
+
+<ContentPage
+    x:Class="PokeApp.ListPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <StackLayout>
         <Frame>
-            <Image Source="PokeDex.jpg" HeightRequest="100"/>
+            <Image HeightRequest="100" Source="PokeDex.jpg" />
         </Frame>
 
-        <ListView x:Name="pokemonsList"
-                  HasUnevenRows="True"
-                  ItemsSource="{Binding MyList}">
-            <ListView.ItemTemplate>
+        <CollectionView
+            x:Name="pokemonsList"
+            Margin="20,10"
+            ItemsSource="{Binding MyList}"
+            SelectionMode="Single"
+            SelectionChanged="Selection">
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout
+                    Orientation="Vertical"
+                    Span="1"
+                    VerticalItemSpacing="10" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <ViewCell>
-                        <Grid Margin="10">
-                            <Frame BackgroundColor="Gray" CornerRadius="20">
-                                <StackLayout Orientation="Horizontal">
-                                    <StackLayout>
-                                        <StackLayout Orientation="Horizontal" Spacing="10">
-                                            <Label Text="{Binding Name}"></Label>
-                                            <Label Text="{Binding Number}"></Label>
-                                        </StackLayout>
-                                        <StackLayout Orientation="Horizontal" Spacing="20">
-                                            <Label Text="{Binding Type1}"></Label>
-                                            <Label Text="{Binding Type2}"></Label>
-                                        </StackLayout>
-                                    </StackLayout>
-                                    <Image Source="{Binding UrlImg}" HeightRequest="50" WidthRequest="50" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand"/>
+                    <Frame BorderColor="Black" CornerRadius="20" BackgroundColor="{Binding TypeColor}">
+                        <StackLayout Orientation="Horizontal">
+                            <StackLayout Spacing="10" VerticalOptions="CenterAndExpand">
+                                <StackLayout Orientation="Horizontal" Spacing="20">
+                                    <Label FontSize="20" FontAttributes="Bold" Text="{Binding Name}" />
+                                    <Label FontSize="20" FontAttributes="Bold" Text="{Binding Number}" />
                                 </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="10">
+                                    <Frame CornerRadius="20" BorderColor="Black">
+                                        <Label Text="{Binding Type1}" />
+                                    </Frame>
+                                    <Frame CornerRadius="20" BorderColor="Black" IsVisible="{Binding FrameType2}">
+                                        <Label Text="{Binding Type2}" />
+                                    </Frame>
+                                </StackLayout>
+                            </StackLayout>
+                            <Frame
+                                CornerRadius="20"
+                                HorizontalOptions="EndAndExpand"
+                                VerticalOptions="CenterAndExpand"
+                                BorderColor="Black">
+                                <Image
+                                    HeightRequest="50"
+                                    Source="{Binding Url}"
+                                    WidthRequest="50" />
                             </Frame>
-                        </Grid>
-                    </ViewCell>
+                        </StackLayout>
+                    </Frame>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </StackLayout>
 </ContentPage>
