--- a/PokeApp/PokeApp/Pages/ListPage.xaml
+++ b/PokeApp/PokeApp/Pages/ListPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <ContentPage
     x:Class="PokeApp.ListPage"
@@ -13,8 +13,8 @@
             x:Name="pokemonsList"
             Margin="20,10"
             ItemsSource="{Binding MyList}"
-            SelectionMode="Single"
-            SelectionChanged="Selection">
+            SelectionChanged="Selection"
+            SelectionMode="Single">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout
                     Orientation="Vertical"
@@ -23,31 +23,43 @@
             </CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame BorderColor="Black" CornerRadius="20" BackgroundColor="{Binding TypeColor}">
+                    <Frame
+                        BackgroundColor="{Binding TypeColor1}"
+                        BorderColor="Black"
+                        CornerRadius="20">
                         <StackLayout Orientation="Horizontal">
                             <StackLayout Spacing="10" VerticalOptions="CenterAndExpand">
                                 <StackLayout Orientation="Horizontal" Spacing="20">
-                                    <Label FontSize="20" FontAttributes="Bold" Text="{Binding Name}" />
-                                    <Label FontSize="20" FontAttributes="Bold" Text="{Binding Number}" />
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="{Binding Name}" />
+                                    <Label
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="{Binding Number}" />
                                 </StackLayout>
                                 <StackLayout Orientation="Horizontal" Spacing="10">
-                                    <Frame CornerRadius="20" BorderColor="Black">
-                                        <Label Text="{Binding Type1}" />
+                                    <Frame BorderColor="Black" CornerRadius="20">
+                                        <Label FontAttributes="Bold" FontSize="12" Text="{Binding Type1}" />
                                     </Frame>
-                                    <Frame CornerRadius="20" BorderColor="Black" IsVisible="{Binding FrameType2}">
-                                        <Label Text="{Binding Type2}" />
+                                    <Frame
+                                        BorderColor="Black"
+                                        CornerRadius="20"
+                                        IsVisible="{Binding FrameType2}">
+                                        <Label FontAttributes="Bold" FontSize="12" Text="{Binding Type2}" />
                                     </Frame>
                                 </StackLayout>
                             </StackLayout>
                             <Frame
+                                BorderColor="Black"
                                 CornerRadius="20"
                                 HorizontalOptions="EndAndExpand"
-                                VerticalOptions="CenterAndExpand"
-                                BorderColor="Black">
+                                VerticalOptions="CenterAndExpand">
                                 <Image
                                     HeightRequest="50"
-                                    Source="{Binding Url}"
-                                    WidthRequest="50" />
+                                    WidthRequest="50"
+                                    Source="{Binding Url}"/>
                             </Frame>
                         </StackLayout>
                     </Frame>
