--- a/PokeApp/PokeApp/Pages/MainPage.xaml
+++ b/PokeApp/PokeApp/Pages/MainPage.xaml
@@ -4,7 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentPage.Content>
-        <FlexLayout Direction="Column">
+        <StackLayout>
             <Frame>
                 <Image HeightRequest="100" Source="PokeApp.jpg" />
             </Frame>
@@ -38,6 +38,6 @@
                     </StackLayout>
                 </StackLayout>
             </ScrollView>
-        </FlexLayout>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
